# nesmulator

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/libnesmulator/: Cargo.toml
crates/libnesmulator/src/: all_opcodes.rs  emu.rs  lib.rs  mapping.rs  registers.rs
crates/libnesmulator/src/emu/: exec_instruction.rs
crates/libnesmulator/src/mapping/: nrom.rs
crates/nesfile/: Cargo.toml
crates/nesfile/src/: lib.rs
crates/nesfile/tests/: roms_do_parse.rs  roms_parse.rs
crates/nesfile/tests/roms-for-testing/: README.md
