[workspace]
resolver = "2"
members = [
    "crates/nesfile",
    "crates/libnesmulator",
]

[workspace.dependencies]
nom = "7.1"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"
deprecated_safe = "forbid"
# missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
enum_glob_use = "allow"
